# pydantic-ai-skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml  sonarqube.yml
docs/: advanced.md  concepts.md  contributing.md  creating-skills.md  hooks.md  index.md  installation.md  patterns.md  programmatic-skills.md  quick-start.md  registries.md  sandbox.md  security.md
docs/api/: capability.md  registries.md  toolset.md  types.md
examples/: README.md  advanced_usage.py  basic_usage.py  debug_local_logging.py  git_registry_usage.py  programatic_skills.py  sandbox_usage.py
examples/skills/text-utils/: SKILL.md
examples/skills/text-utils/scripts/: word_count.py
pydantic_ai_skills/: __init__.py  _parsing.py  capability.py  directory.py  local.py  sandbox.py  toolset.py  types.py
pydantic_ai_skills/registries/: __init__.py  _base.py  _copy.py  combined.py  filtered.py  git.py  prefixed.py  s3.py
src/pydantic_ai_skills/: __init__.py  skills.py
tests/: test_capability.py  test_coverage_improvements.py  test_discovery.py  test_edge_cases.py  test_git_registry.py  test_local.py  test_parsing.py  test_pydantic_ai_compat.py  test_registry_composition.py  test_reload.py  test_s3_registry.py  test_sandbox.py  test_skills.py  test_toolset.py  test_toolset_coverage.py  test_types.py  test_validation.py
